--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -20,6 +20,6 @@
     <item
         android:id="@+id/item_about"
         android:enabled="true"
-        android:title="About"
+        android:title="Quit"
         android:visible="true" />
 </menu>
